Initial version of the new MySQL Router component
It follows proper componewnt lifetime rules, has its own config file
section with single parameter.

--- a/router/src/CMakeLists.txt
+++ b/router/src/CMakeLists.txt
@@ -32,6 +32,7 @@ ADD_SUBDIRECTORY(mysql_protocol)
 ADD_SUBDIRECTORY(mysqlxmessages)
 ADD_SUBDIRECTORY(openssl)
 ADD_SUBDIRECTORY(plugin_info)
+ADD_SUBDIRECTORY(plus)
 ADD_SUBDIRECTORY(protobuf)
 ADD_SUBDIRECTORY(rest_api)
 ADD_SUBDIRECTORY(rest_connection_pool)
